--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="https://static.vecteezy.com/system/resources/previews/016/716/181/original/website-3d-icon-png.png"/>
+<link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/Farshid-Fardnian/Upload@main/Iconpadideh.ico"/>
 <title>شرکت پدیده تجهیز زیبا سازی پارسی</title>
 <style type="text/css">
 ::-webkit-scrollbar {
